@startuml Template_Method_Pattern

' Template Method Pattern - Caffeine Beverage with Hook
' Shows the structure of the Template Method pattern with:
' - Template method (non-virtual)
' - Abstract methods (pure virtual)
' - Concrete methods (default implementations)
' - Hooks (virtual with default)

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam class {
    BackgroundColor<<abstract>> LightYellow
    BorderColor<<abstract>> Black
    BackgroundColor White
    BorderColor Black
    ArrowColor Black
}

' Abstract base class
abstract class CaffeineBeverageWithHook <<abstract>> {
    ' Public interface
    + {method} prepareRecipe() : void
    + ~CaffeineBeverageWithHook() : virtual

    ' Protected customization interface
    # {abstract} brew() : void = 0
    # {abstract} addCondiments() : void = 0
    # boilWater() : void
    # pourInCup() : void
    # customerWantsCondiments() : bool

    .. Template Method Pattern ..
    prepareRecipe() is the template method
    It defines the algorithm skeleton:
    1. boilWater()
    2. brew()
    3. pourInCup()
    4. if (customerWantsCondiments())
    5.     addCondiments()
}

' Concrete subclass: Coffee
class CoffeeWithHook {
    ' Protected implementations
    # brew() : void override
    # addCondiments() : void override
    # customerWantsCondiments() : bool override

    ' Private helper
    - getUserInput() : string

    .. Coffee-Specific Behavior ..
    brew(): "Dripping Coffee through filter"
    addCondiments(): "Adding Sugar and Milk"
    customerWantsCondiments(): Asks user
}

' Concrete subclass: Tea
class TeaWithHook {
    ' Protected implementations
    # brew() : void override
    # addCondiments() : void override
    # customerWantsCondiments() : bool override

    ' Private helper
    - getUserInput() : string

    .. Tea-Specific Behavior ..
    brew(): "Steeping the tea"
    addCondiments(): "Adding Lemon"
    customerWantsCondiments(): Asks user
}

' Relationships
CaffeineBeverageWithHook <|-- CoffeeWithHook : extends
CaffeineBeverageWithHook <|-- TeaWithHook : extends

' Notes
note right of CaffeineBeverageWithHook::prepareRecipe
  **Template Method (non-virtual)**
  Defines algorithm structure.
  Cannot be overridden by subclasses.

  Algorithm:
    boilWater()
    brew()
    pourInCup()
    if (customerWantsCondiments())
        addCondiments()
end note

note bottom of CaffeineBeverageWithHook
  **Method Types:**
  • Template Method: prepareRecipe() - algorithm skeleton
  • Abstract Methods: brew(), addCondiments() - must implement
  • Concrete Methods: boilWater(), pourInCup() - default impl
  • Hook: customerWantsCondiments() - optional override

  **Hollywood Principle:**
  "Don't call us, we'll call you"
  Base class controls flow and calls subclass methods.
end note

note bottom of CoffeeWithHook
  Implements abstract methods:
  • brew() - coffee-specific brewing
  • addCondiments() - coffee condiments

  Overrides hook:
  • customerWantsCondiments() - asks user

  Cannot override prepareRecipe()
  (algorithm structure is protected)
end note

' Legend
legend bottom
  **Template Method Pattern**

  **Intent:** Define skeleton of algorithm in a method,
  deferring some steps to subclasses. Subclasses
  redefine certain steps without changing structure.

  **Key Components:**
  1. Template Method - Defines algorithm (non-virtual)
  2. Abstract Methods - Steps subclasses must implement
  3. Concrete Methods - Default implementations
  4. Hooks - Optional extension points

  **Benefits:**
  • Algorithm defined once (no duplication)
  • Enforces algorithm consistency
  • Subclasses only implement variations
  • Hollywood Principle (inversion of control)
endlegend

@enduml
